--- a/BIBPic/MainWindow.xaml
+++ b/BIBPic/MainWindow.xaml
@@ -6,7 +6,30 @@
         xmlns:local="clr-namespace:BIBPic"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+    <Grid ShowGridLines="True">
+        <Grid.Resources>
+            <Style TargetType="Label">
+                <Setter Property="Margin" Value="20"></Setter>
+                <Setter Property="VerticalAlignment" Value="Center"></Setter>
+            </Style>
+        </Grid.Resources>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition></RowDefinition>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <Label Content="Einstellungen" Grid.ColumnSpan="2" HorizontalAlignment="Center"></Label>
+        <Label Grid.Row="1" Content="Ordnerpfad:"></Label>
+        <Label Grid.Row="2" Content="Klasse:"></Label>
+
+        <ComboBox Grid.Column="1" Grid.Row="1"></ComboBox>
+        <ComboBox Grid.Column="1" Grid.Row="2"></ComboBox>
 
     </Grid>
 </Window>
