--- a/BIBPic/MainWindow.xaml
+++ b/BIBPic/MainWindow.xaml
@@ -20,16 +20,19 @@
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
-            <RowDefinition></RowDefinition>
+            <RowDefinition/>
+            <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
 
         <Label Content="Einstellungen" Grid.ColumnSpan="2" HorizontalAlignment="Center"></Label>
         <Label Grid.Row="1" Content="Ordnerpfad:"></Label>
         <Label Grid.Row="2" Content="Klasse:"></Label>
+        <Label Content="Log" Grid.Row="4"></Label>
 
         <ComboBox Grid.Column="1" Grid.Row="1"></ComboBox>
         <ComboBox Grid.Column="1" Grid.Row="2"></ComboBox>
+        <TextBox Grid.Column="1" Grid.Row="4"></TextBox>
 
     </Grid>
 </Window>
