--- a/BIBPic/MainWindow.xaml
+++ b/BIBPic/MainWindow.xaml
@@ -3,9 +3,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:BIBPic"
+        xmlns:local="clr-namespace:BIBPic" xmlns:local1="clr-namespace:BIBPic.ViewModel"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+
+
+    <Window.DataContext>
+        <local1:MainViewModel />
+    </Window.DataContext>
+
     <Grid ShowGridLines="True">
         <Grid.Resources>
             <Style TargetType="Label">
@@ -31,7 +37,7 @@
         <Label Content="Log" Grid.Row="4"></Label>
 
         <ComboBox Grid.Column="1" Grid.Row="1"></ComboBox>
-        <ComboBox Grid.Column="1" Grid.Row="2"></ComboBox>
+        <ComboBox Grid.Column="1" Grid.Row="2" ItemsSource="{Binding ClassNamesList}" DisplayMemberPath="{Binding ClassValue}"></ComboBox>
         <TextBox Grid.Column="1" Grid.Row="4"></TextBox>
 
     </Grid>
