--- a/BIBPic/MainWindow.xaml
+++ b/BIBPic/MainWindow.xaml
@@ -18,6 +18,12 @@
                 <Setter Property="Margin" Value="20"></Setter>
                 <Setter Property="VerticalAlignment" Value="Center"></Setter>
             </Style>
+
+            <Style TargetType="ComboBox">
+                <Setter Property="Margin" Value="20"></Setter>
+                <Setter Property="VerticalAlignment" Value="Center"></Setter>
+            </Style>
+
         </Grid.Resources>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
@@ -37,7 +43,7 @@
         <Label Content="Log" Grid.Row="4"></Label>
 
         <ComboBox Grid.Column="1" Grid.Row="1"></ComboBox>
-        <ComboBox Grid.Column="1" Grid.Row="2" ItemsSource="{Binding ClassNamesList}" DisplayMemberPath="{Binding ClassValue}"></ComboBox>
+        <ComboBox Grid.Column="1" Grid.Row="2" ItemsSource="{Binding ClassNamesList}" SelectedItem="{Binding ClassValue}" DisplayMemberPath="ClassNameId" SelectedIndex="0"></ComboBox>
         <TextBox Grid.Column="1" Grid.Row="4"></TextBox>
 
     </Grid>
